style.css
/* ... */
  @media only screen and (max-width: 1199px) and (min-width: 992px){
    .header-logo{
        width: 100%;
        margin-left: 20px;
    }
    .container{
        width: 90%;
    }
    .header-left{
        width: 35%;
        float: left;
    }
    .header-right{
        width: 65%;
    }
    .header-navbar{
        display: none;
    }
    .header-left h3 {
        /* margin-top: 17px; */
        font-size: 22px;
        line-height: 40px;
        /* margin-left: 12px; */
    }
    .header-navbar{
        display: block;
    }
    .telephone{
        padding-right: 25px;
        font-size: 27px;
    }
    .navbar-ul a{
        margin-right: 20px;
    }
    /* banner section */
    .banner-form-div{
        padding: 15px 0px 80px;
    }
    .form-header img{
        width: 50px;
    }
    .form-header h3{
        font-size: 28px;
        margin-top: 7px;
    }
    .download-guide-div{
        padding: 20px;
    }
    .prospect-shop-title-right,
    .client-prospect-shop-title-right{
        margin-right: 60px;
    }
    .client-card-inner-content {
        margin-right: 15%;
    }
    /* image section */
    .images-wrapper{
        margin: 0px;
    }
    .four-images-div{
        min-width: 60%;
    }
    .image-div span{
        margin: 0px;
    }
    .download-div{
        min-width: 40%;
    }
    .image-div span {
        padding: 48px 62px;
    }
    .download-inner-div{
        padding: 14px 21px;
        width: 75%;
    }
  }
  @media only screen and (max-width: 1599px) and (min-width: 1200px){
    .container{
        width: 85%;
    }
    .header-left{
        width: 40%;
    }
    .header-right{
        width: 60%;
    }
    .client-card-inner-content {
        margin-right: 25%;
    }
    .images-wrapper{
        margin: 0px;
    }
    .four-images-div{
        min-width: 60%;
    }
    .image-div span{
        margin: 0px;
    }
    .download-div{
        min-width: 40%;
    }
    .image-div span {
        padding: 48px 62px;
    }
    .download-inner-div{
        padding: 14px 21px;
        width: 70%;
    }
  }
  @media only screen and (min-width: 1600px){
   .container{
    min-width: 85%;
   }
  }

